# Projeto-Sistemas-Distribuidos

./: .gitignore  README.md  client.sh  compile.sh  environment.sh  pom.xml  pyproject.toml  requirements.txt  server.sh
desc/: enunciado.md  grpc.md
src/: main.py  server.py
src/gRPC/: client.py  greeter_client.py  greeter_server.py  helloworld_pb2_grpc.py  server.py
src/gRPC/protos/: kvs.proto
